# resume-reviewer

./: .gitignore  README.md  build.sh  render.yaml
backend/: build.sh  pyproject.toml  requirements.txt  start_server.bat
backend/app/: main.py
frontend/: .env.production  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: index.css  setupProxy.js
frontend/src/components/: FileUpload.tsx  Results.tsx  ResumeHistory.tsx
frontend/src/pages/: Home.tsx
